// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders collapsed 1`] = `
<nav
  className="collection-tree"
>
  <header
    className="touch-header hidden-mouse-md-up hidden-xs-down"
  >
    <h3>
      Library
    </h3>
  </header>
  <div
    className="level-root active"
  >
    <div
      className="scroll-container"
      role="tree"
    >
      <section>
        <h4>
          My Library
        </h4>
        <div
          className="level level-1  "
        >
          <ul
            className="nav"
            role="group"
          >
            <li
              className=" "
            >
              <div
                aria-expanded={false}
                className="item-container"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="treeitem"
                tabIndex="0"
              >
                <div
                  className="twisty-container"
                >
                  <button
                    className="twisty"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    type="button"
                  />
                </div>
                <svg
                  className="svg-icon icon-folders touch"
                  role="img"
                  style={
                    Object {
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <use
                    viewBox="0 0 512 512"
                    xlinkHref="/icons/28/folders.svg#folders"
                  />
                </svg>
                <svg
                  className="svg-icon icon-folder mouse"
                  role="img"
                  style={
                    Object {
                      "height": "16px",
                      "width": "16px",
                    }
                  }
                >
                  <use
                    viewBox="0 0 512 512"
                    xlinkHref="/icons/16/folder.svg#folder"
                  />
                </svg>
                <a>
                  depth-1
                </a>
              </div>
              <div
                className="level level-2  "
              >
                <ul
                  className="nav"
                  role="group"
                >
                  <li
                    className=" "
                  >
                    <div
                      aria-expanded={false}
                      className="item-container"
                      onClick={[Function]}
                      onKeyPress={[Function]}
                      role="treeitem"
                      tabIndex="0"
                    >
                      <div
                        className="twisty-container"
                      >
                        <button
                          className="twisty"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          type="button"
                        />
                      </div>
                      <svg
                        className="svg-icon icon-folders touch"
                        role="img"
                        style={
                          Object {
                            "height": "28px",
                            "width": "28px",
                          }
                        }
                      >
                        <use
                          viewBox="0 0 512 512"
                          xlinkHref="/icons/28/folders.svg#folders"
                        />
                      </svg>
                      <svg
                        className="svg-icon icon-folder mouse"
                        role="img"
                        style={
                          Object {
                            "height": "16px",
                            "width": "16px",
                          }
                        }
                      >
                        <use
                          viewBox="0 0 512 512"
                          xlinkHref="/icons/16/folder.svg#folder"
                        />
                      </svg>
                      <a>
                        depth-2
                      </a>
                    </div>
                    <div
                      className="level level-3  "
                    >
                      <ul
                        className="nav"
                        role="group"
                      >
                        <li
                          className=" "
                        >
                          <div
                            aria-expanded={false}
                            className="item-container"
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="treeitem"
                            tabIndex="0"
                          >
                            <div
                              className="twisty-container"
                            >
                              <button
                                className="twisty"
                                onClick={[Function]}
                                onKeyPress={[Function]}
                                type="button"
                              />
                            </div>
                            <svg
                              className="svg-icon icon-folders touch"
                              role="img"
                              style={
                                Object {
                                  "height": "28px",
                                  "width": "28px",
                                }
                              }
                            >
                              <use
                                viewBox="0 0 512 512"
                                xlinkHref="/icons/28/folders.svg#folders"
                              />
                            </svg>
                            <svg
                              className="svg-icon icon-folder mouse"
                              role="img"
                              style={
                                Object {
                                  "height": "16px",
                                  "width": "16px",
                                }
                              }
                            >
                              <use
                                viewBox="0 0 512 512"
                                xlinkHref="/icons/16/folder.svg#folder"
                              />
                            </svg>
                            <a>
                              depth-3
                            </a>
                          </div>
                          <div
                            className="level level-4  "
                          >
                            <ul
                              className="nav"
                              role="group"
                            >
                              <li
                                className=" "
                              >
                                <div
                                  aria-expanded={false}
                                  className="item-container"
                                  onClick={[Function]}
                                  onKeyPress={[Function]}
                                  role="treeitem"
                                  tabIndex="0"
                                >
                                  <div
                                    className="twisty-container"
                                  >
                                    <button
                                      className="twisty"
                                      onClick={[Function]}
                                      onKeyPress={[Function]}
                                      type="button"
                                    />
                                  </div>
                                  <svg
                                    className="svg-icon icon-folder touch"
                                    role="img"
                                    style={
                                      Object {
                                        "height": "28px",
                                        "width": "28px",
                                      }
                                    }
                                  >
                                    <use
                                      viewBox="0 0 512 512"
                                      xlinkHref="/icons/28/folder.svg#folder"
                                    />
                                  </svg>
                                  <svg
                                    className="svg-icon icon-folder mouse"
                                    role="img"
                                    style={
                                      Object {
                                        "height": "16px",
                                        "width": "16px",
                                      }
                                    }
                                  >
                                    <use
                                      viewBox="0 0 512 512"
                                      xlinkHref="/icons/16/folder.svg#folder"
                                    />
                                  </svg>
                                  <a>
                                    depth-4
                                  </a>
                                </div>
                              </li>
                            </ul>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </section>
      <section>
        <h4>
          Group Libraries
        </h4>
      </section>
    </div>
  </div>
</nav>
`;

exports[`Renders expanded 1`] = `
<nav
  className="collection-tree"
>
  <header
    className="touch-header hidden-mouse-md-up hidden-xs-down"
  >
    <h3>
      Library
    </h3>
  </header>
  <div
    className="level-root active"
  >
    <div
      className="scroll-container"
      role="tree"
    >
      <section>
        <h4>
          My Library
        </h4>
        <div
          className="level level-1  "
        >
          <ul
            className="nav"
            role="group"
          >
            <li
              className="open "
            >
              <div
                aria-expanded={true}
                className="item-container"
                onClick={[Function]}
                onKeyPress={[Function]}
                role="treeitem"
                tabIndex="0"
              >
                <div
                  className="twisty-container"
                >
                  <button
                    className="twisty"
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    type="button"
                  />
                </div>
                <svg
                  className="svg-icon icon-folders touch"
                  role="img"
                  style={
                    Object {
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <use
                    viewBox="0 0 512 512"
                    xlinkHref="/icons/28/folders.svg#folders"
                  />
                </svg>
                <svg
                  className="svg-icon icon-folder mouse"
                  role="img"
                  style={
                    Object {
                      "height": "16px",
                      "width": "16px",
                    }
                  }
                >
                  <use
                    viewBox="0 0 512 512"
                    xlinkHref="/icons/16/folder.svg#folder"
                  />
                </svg>
                <a>
                  depth-1
                </a>
              </div>
              <div
                className="level level-2  "
              >
                <ul
                  className="nav"
                  role="group"
                >
                  <li
                    className="open "
                  >
                    <div
                      aria-expanded={true}
                      className="item-container"
                      onClick={[Function]}
                      onKeyPress={[Function]}
                      role="treeitem"
                      tabIndex="0"
                    >
                      <div
                        className="twisty-container"
                      >
                        <button
                          className="twisty"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          type="button"
                        />
                      </div>
                      <svg
                        className="svg-icon icon-folders touch"
                        role="img"
                        style={
                          Object {
                            "height": "28px",
                            "width": "28px",
                          }
                        }
                      >
                        <use
                          viewBox="0 0 512 512"
                          xlinkHref="/icons/28/folders.svg#folders"
                        />
                      </svg>
                      <svg
                        className="svg-icon icon-folder mouse"
                        role="img"
                        style={
                          Object {
                            "height": "16px",
                            "width": "16px",
                          }
                        }
                      >
                        <use
                          viewBox="0 0 512 512"
                          xlinkHref="/icons/16/folder.svg#folder"
                        />
                      </svg>
                      <a>
                        depth-2
                      </a>
                    </div>
                    <div
                      className="level level-3  "
                    >
                      <ul
                        className="nav"
                        role="group"
                      >
                        <li
                          className="open "
                        >
                          <div
                            aria-expanded={true}
                            className="item-container"
                            onClick={[Function]}
                            onKeyPress={[Function]}
                            role="treeitem"
                            tabIndex="0"
                          >
                            <div
                              className="twisty-container"
                            >
                              <button
                                className="twisty"
                                onClick={[Function]}
                                onKeyPress={[Function]}
                                type="button"
                              />
                            </div>
                            <svg
                              className="svg-icon icon-folders touch"
                              role="img"
                              style={
                                Object {
                                  "height": "28px",
                                  "width": "28px",
                                }
                              }
                            >
                              <use
                                viewBox="0 0 512 512"
                                xlinkHref="/icons/28/folders.svg#folders"
                              />
                            </svg>
                            <svg
                              className="svg-icon icon-folder mouse"
                              role="img"
                              style={
                                Object {
                                  "height": "16px",
                                  "width": "16px",
                                }
                              }
                            >
                              <use
                                viewBox="0 0 512 512"
                                xlinkHref="/icons/16/folder.svg#folder"
                              />
                            </svg>
                            <a>
                              depth-3
                            </a>
                          </div>
                          <div
                            className="level level-4  "
                          >
                            <ul
                              className="nav"
                              role="group"
                            >
                              <li
                                className="open "
                              >
                                <div
                                  aria-expanded={true}
                                  className="item-container"
                                  onClick={[Function]}
                                  onKeyPress={[Function]}
                                  role="treeitem"
                                  tabIndex="0"
                                >
                                  <div
                                    className="twisty-container"
                                  >
                                    <button
                                      className="twisty"
                                      onClick={[Function]}
                                      onKeyPress={[Function]}
                                      type="button"
                                    />
                                  </div>
                                  <svg
                                    className="svg-icon icon-folder touch"
                                    role="img"
                                    style={
                                      Object {
                                        "height": "28px",
                                        "width": "28px",
                                      }
                                    }
                                  >
                                    <use
                                      viewBox="0 0 512 512"
                                      xlinkHref="/icons/28/folder.svg#folder"
                                    />
                                  </svg>
                                  <svg
                                    className="svg-icon icon-folder mouse"
                                    role="img"
                                    style={
                                      Object {
                                        "height": "16px",
                                        "width": "16px",
                                      }
                                    }
                                  >
                                    <use
                                      viewBox="0 0 512 512"
                                      xlinkHref="/icons/16/folder.svg#folder"
                                    />
                                  </svg>
                                  <a>
                                    depth-4
                                  </a>
                                </div>
                              </li>
                            </ul>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </section>
      <section>
        <h4>
          Group Libraries
        </h4>
      </section>
    </div>
  </div>
</nav>
`;
